--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -4,8 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Somos una empresa dedicada a la resolución de problemas, tanto de software como de hardware. Ofrecemos servicio técnico y seguimiento personalizado de los mismos.">
+    <meta name="keywords" content="NOSOTROS, SOFTWARE, HARDWARE, MARKETING, RAFAELA">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="shortcur icon" href="../img/favicon.ico">
     <title>Nosotros</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -43,6 +47,57 @@
         </nav>
     </header>
 
+    <main>
+        <h1>Bienvenidos a Software Systems: Tu Socio en Soluciones Tecnológicas</h1>
+        <div class="textoNos">
+            <h2>Descubre el Futuro de la Tecnología con Software Systems</h2>
+
+            <p>En diciembre de 2022, nació una innovadora idea de montar una empresa en el mundo del desarrollo de
+                software, llamada: Software Systems. Nos enorgullece presentarnos como tu socio confiable en soluciones
+                tecnológicas de vanguardia. En Software Systems, no solo creamos software, sino que también moldeamos el
+                futuro digital a través de nuestras soluciones integrales.</p>
+
+            <h2>Nuestra Gama de Servicios</h2>
+
+            <h3>Instalación de Software</h3>
+            <p>En Software Systems, entendemos la importancia de tener software confiable y eficiente en tu entorno
+                tecnológico. Nuestros expertos no solo instalan software, sino que también optimizan cada aspecto para
+                garantizar un rendimiento óptimo. Ya sea que necesites un nuevo software o actualizaciones de los
+                existentes, estamos aquí para hacerlo sin problemas y con precisión.</p>
+
+            <h3>Marketing Digital</h3>
+            <p>El mundo de los negocios se ha trasladado en gran medida al espacio digital, y en Software Systems, te
+                ayudamos a navegar por estas aguas con éxito. Nuestro equipo de marketing digital está altamente
+                capacitado para diseñar estrategias que aumenten tu visibilidad en línea, atraigan a tu audiencia
+                objetivo y generen un crecimiento sostenible. Desde la optimización de motores de búsqueda hasta la
+                gestión de redes sociales, te brindamos las herramientas para prosperar en el mundo digital.</p>
+
+            <h3>Servicio Técnico 24/7</h3>
+            <p>Comprendemos que las interrupciones tecnológicas pueden ocurrir en cualquier momento, lo que puede
+                impactar negativamente en tu productividad. Por eso, en Software Systems, ofrecemos un servicio técnico
+                disponible las 24 horas del día, los 7 días de la semana. Nuestro equipo altamente competente y dedicado
+                está listo para resolver cualquier problema técnico que puedas enfrentar, sin importar la hora ni la
+                complejidad.</p>
+
+            <h2>Nuestra Visión y Valores</h2>
+
+            <p>En Software Systems, nuestra visión es transformar los desafíos tecnológicos en oportunidades de
+                crecimiento. Creemos en la innovación constante, la excelencia en el servicio al cliente y la integridad
+                en todas nuestras operaciones. Nuestro compromiso con la calidad y la satisfacción del cliente es la
+                base de nuestro éxito.</p>
+
+            <h2>Únete a la Revolución Tecnológica</h2>
+
+            <p>Si estás buscando un socio confiable para tus necesidades tecnológicas, Software Systems está aquí para
+                ti. Nuestro equipo altamente experimentado y apasionado está listo para superar tus expectativas y
+                brindarte soluciones que impulsen tu éxito. Juntos, podemos escribir el próximo capítulo en la historia
+                tecnológica.</p>
+
+            <h4>¡Contáctanos hoy mismo y descubre cómo Software Systems puede llevar tus ideas al mundo digital con
+                innovación y excelencia inigualables!</h4>
+        </div>
+    </main>
+
     <footer>
         <p>
             © Software Systems, todos los derechos reservados.
@@ -50,7 +105,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-    </script>
+        </script>
 
 </body>
 
