--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Somos una empresa dedicada a la resolución de problemas, tanto de software como de hardware. Ofrecemos servicio técnico y seguimiento personalizado de los mismos.">
+  <meta name="keywords" content="INICIO, SOFTWARE, HARDWARE, MARKETING, RAFAELA">
   <title>Software Systems</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="shortcur icon" href="./img/favicon.ico">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -46,7 +50,7 @@
     <h1><strong>Home</strong></h1>
     <div class="inicio">
       <div class="carousel">
-        <div class="container d-flex justify-content-start" style="width: auto; height: auto;">
+        <div class="container d-flex justify-content-start" style=" width: 100%;">
           <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
@@ -107,23 +111,22 @@
         </div>
       </div>
       <div class="textInicio">
-        <h2>Software Systems</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod minima magnam et repudiandae totam beatae porro
-          ut voluptate excepturi, dolores repellendus earum fugiat! Culpa minus ex autem odio ipsam nisi.
-          Deserunt molestiae deleniti ducimus iure obcaecati molestias dolor ipsum. Molestias sint cum consequuntur
-          cumque natus tempore aspernatur facere quibusdam pariatur fugiat necessitatibus earum, iusto voluptatum
-          accusamus, voluptatibus odio maxime! Officia.
-          Optio vitae officiis dolor ipsam nam exercitationem quo? Odio placeat reiciendis facere consectetur, ut
-          adipisci numquam soluta recusandae obcaecati ea nemo eum? Minus rem numquam cumque? Sit magni veritatis et.
-          Eius nobis omnis atque numquam ut autem ratione dignissimos, corporis ab sed vitae fuga quis, sunt quasi
-          dolores? Officiis laborum sint velit facilis accusamus quibusdam beatae dolor eligendi ipsa omnis.
-          Consequuntur ab ratione dolor, nostrum doloremque nobis, expedita corporis accusantium voluptas perspiciatis
-          laudantium distinctio. Minus minima voluptatibus velit doloribus distinctio, enim adipisci eum blanditiis.
-          Placeat alias perspiciatis quisquam at laudantium?
-          In id maiores consectetur iusto earum repudiandae. Perspiciatis optio quas sed, saepe consectetur consequatur
-          tempore praesentium sunt numquam dicta provident quis error modi molestiae adipisci voluptates quisquam odit
-          sapiente rerum!
-        </p>
+        <h2 class="H2Home"><strong>Bienvenidos a Software Systems: Tu Socio en Soluciones Tecnológicas</strong></h2>
+
+        <p class="textoInc"> En Software Systems, fundada en diciembre de 2022, estamos dedicados a ofrecer soluciones
+          tecnológicas avanzadas para empresas como la tuya. Nuestros servicios incluyen:</p>
+
+        <p class="textoInc">- <strong>Instalación de Software:</strong> Ofrecemos instalación y optimización de software
+          para un rendimiento óptimo.</p>
+        <p class="textoInc">- <strong>Marketing Digital:</strong> Potenciamos tu presencia en línea a través de
+          estrategias de marketing digital efectivas.</p>
+        <p class="textoInc">- <strong>Servicio Técnico 24/7:</strong> Nuestro equipo está disponible en todo momento
+          para resolver problemas técnicos.</p>
+
+        <p class="textoInc">Nuestra visión es convertir desafíos tecnológicos en oportunidades de crecimiento. Unete a
+          nosotros para formar parte de la revolución tecnológica. ¡Contáctanos y descubre cómo Software Systems puede
+          llevar tus ideas al mundo digital con innovación y excelencia inigualables!</p>
+
       </div>
     </div>
   </main>
@@ -138,7 +141,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-  </script>
+    </script>
 </body>
 
 </html>
