--- a/html/contacto.html
+++ b/html/contacto.html
@@ -4,8 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Somos una empresa dedicada a la resolución de problemas, tanto de software como de hardware. Ofrecemos servicio técnico y seguimiento personalizado de los mismos.">
+  <meta name="keywords" content="CONTACTO, SOFTWARE, HARDWARE, MARKETING, RAFAELA">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="shortcur icon" href="../img/favicon.ico">
   <title>Contacto</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -85,7 +89,7 @@
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-  </script>
+    </script>
 
 </body>
 
