--- a/html/servicios.html
+++ b/html/servicios.html
@@ -4,9 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Somos una empresa dedicada a la resolución de problemas, tanto de software como de hardware. Ofrecemos servicio técnico y seguimiento personalizado de los mismos.">
+    <meta name="keywords" content="SERVICIOS, SOFTWARE, HARDWARE, MARKETING, RAFAELA">
     <title>Servicios</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="shortcur icon" href="../img/favicon.ico">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -43,6 +47,20 @@
         </nav>
     </header>
 
+    <main>
+        <h1 class="titulo">Servicios</h1>
+        <section class="bodyServ">
+            <div class="servicio">
+                <img class="imgS" src="/Img/software.jpg" alt="Instalaciones de software">
+                <p>Instalaciones de software de cualquier tipo, creación y maquetación del mismo.</p>
+            </div>
+            <div class="servicio">
+                <img class="imgH" src="/Img/hardware.jpg" alt="Arreglos de hardware">
+                <p>Servicio técnico de hardware y arreglos varios.</p>
+            </div>
+        </section>
+    </main>
+
     <footer>
         <p>
             © Software Systems, todos los derechos reservados.
@@ -50,7 +68,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-    </script>
+        </script>
 
 </body>
 
